[gd_scene load_steps=27 format=3 uid="uid://dkhodakv1x0h7"]

[ext_resource type="Script" uid="uid://x031tiyraogl" path="res://scripts/desktop_env.gd" id="1_lpqk7"]
[ext_resource type="FontFile" uid="uid://qkke0n4qf5vs" path="res://assets/fonts/Chicago.ttf" id="1_lx1wk"]
[ext_resource type="Texture2D" uid="uid://bcw7hx85vfhn6" path="res://assets/ui/buttonhovered.png" id="1_ovitq"]
[ext_resource type="Texture2D" uid="uid://cjflmmx8qr1cg" path="res://assets/Bliss_(Windows_XP) (2).png" id="2_5eiy6"]
[ext_resource type="Texture2D" uid="uid://bht5uooi8rjgf" path="res://assets/ui/button2.png" id="2_75kf8"]
[ext_resource type="Texture2D" uid="uid://crn8fnvyp4qgp" path="res://assets/logos/trashcan.png" id="3_05goa"]
[ext_resource type="Texture2D" uid="uid://b34jeguax4tha" path="res://assets/ui/button1.png" id="3_lx1wk"]
[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="7_o42ww"]
[ext_resource type="Script" uid="uid://cjdts5fq6uj04" path="res://clock.gd" id="9_dc0b5"]
[ext_resource type="Texture2D" uid="uid://dyx0l0aa6l0at" path="res://assets/logos/folder.png" id="10_4e5iv"]
[ext_resource type="Texture2D" uid="uid://mpip7wcjjyrr" path="res://assets/logos/pdficon.png" id="11_6x3lq"]
[ext_resource type="Script" uid="uid://jj0g0vk3lpc2" path="res://components/trash.gd" id="14_m483i"]
[ext_resource type="PackedScene" uid="uid://674hnm8vwbpn" path="res://components/popups/calendar_popup_ui.tscn" id="16_g75lf"]
[ext_resource type="Texture2D" uid="uid://mb2q2hy3djdx" path="res://assets/logos/cog.png" id="16_xcmse"]
[ext_resource type="Script" uid="uid://cmmevgi7d0n3h" path="res://start_panel_window.gd" id="23_dik0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4e5iv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4e5iv"]
bg_color = Color(0.6, 0.6, 0.6, 0.427451)
border_width_top = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5k3ml"]
bg_color = Color(0.6, 0.6, 0.6, 0.627451)
border_width_top = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uyqq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpqk7"]
border_width_top = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o42ww"]
texture = ExtResource("1_ovitq")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5eiy6"]
texture = ExtResource("2_75kf8")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_05goa"]
texture = ExtResource("3_lx1wk")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_75kf8"]
texture = ExtResource("2_75kf8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m483i"]
bg_color = Color(0.125911, 0.125911, 0.125911, 0.529412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6x3lq"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="DesktopEnv" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_o42ww")
script = ExtResource("1_lpqk7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -366.0
offset_top = -207.0
offset_right = 356.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5eiy6")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 16

[node name="TrashButton" type="Button" parent="MarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme_override_constants/icon_max_width = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_4e5iv")
icon = ExtResource("3_05goa")
icon_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/GridContainer/TrashButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -6.0
offset_right = 23.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_lx1wk")
text = "Trash"
horizontal_alignment = 1

[node name="TrashWindow" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_o42ww")
script = ExtResource("14_m483i")
metadata/_custom_type_script = "uid://c1qvasiiw126v"

[node name="MarginContainer" type="MarginContainer" parent="TrashWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="TrashWindow/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TrashWindow/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "beta_memes_for_betas"
icon = ExtResource("10_4e5iv")
alignment = 0

[node name="Button2" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "the_wolf_ecology_and_behavior.pdf"
icon = ExtResource("11_6x3lq")
alignment = 0

[node name="Button3" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "the_game.pdf"
icon = ExtResource("11_6x3lq")
alignment = 0

[node name="Button4" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "the_will_to_power.pdf"
icon = ExtResource("11_6x3lq")
alignment = 0

[node name="Button5" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "12_rules_for_life.pdf"
icon = ExtResource("11_6x3lq")
alignment = 0

[node name="Button7" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "homework"
icon = ExtResource("10_4e5iv")
alignment = 0

[node name="Button6" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "how_to_win_friends_and_influence_people.pdf"
icon = ExtResource("11_6x3lq")
alignment = 0

[node name="Button9" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "the_fountainhead.pdf"
icon = ExtResource("11_6x3lq")
alignment = 0

[node name="Button8" type="Button" parent="TrashWindow/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_4e5iv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5k3ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_3uyqq")
text = "mrs_incredible_rule_34"
icon = ExtResource("10_4e5iv")
alignment = 0

[node name="TaskbarLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TaskbarWrapper" type="Panel" parent="TaskbarLayer"]
z_index = 1024
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -49.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lpqk7")

[node name="MarginContainer" type="MarginContainer" parent="TaskbarLayer/TaskbarWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TaskbarRow" type="HBoxContainer" parent="TaskbarLayer/TaskbarWrapper/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_lx1wk")
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = SubResource("StyleBoxTexture_o42ww")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5eiy6")
theme_override_styles/normal = SubResource("StyleBoxTexture_05goa")
text = " Σ "

[node name="Control" type="Control" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Taskbar" type="HBoxContainer" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 6
alignment = 2

[node name="SettingsButton2" type="Button" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/ScrollContainer/Taskbar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_o42ww")
icon = ExtResource("16_xcmse")

[node name="TimePanel" type="Panel" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_75kf8")
script = ExtResource("9_dc0b5")

[node name="TimeLabel" type="Label" parent="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/TimePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lx1wk")
theme_override_font_sizes/font_size = 12
text = " 11:11 AM "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CalendarPopupUI" parent="TaskbarLayer" instance=ExtResource("16_g75lf")]
unique_name_in_owner = true
visible = false
offset_left = 842.0
offset_top = 397.0
offset_right = -1.0
offset_bottom = -49.0

[node name="StartPanel" type="Panel" parent="TaskbarLayer"]
unique_name_in_owner = true
offset_left = 3.0
offset_top = 253.0
offset_right = 303.0
offset_bottom = 593.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m483i")
script = ExtResource("23_dik0q")

[node name="VBoxContainer" type="VBoxContainer" parent="TaskbarLayer/StartPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_o42ww")

[node name="Panel" type="Panel" parent="TaskbarLayer/StartPanel/VBoxContainer"]
z_as_relative = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6x3lq")

[node name="Label" type="Label" parent="TaskbarLayer/StartPanel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -10.0
offset_right = 38.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lx1wk")
text = "S I G M A"

[node name="HBoxContainer" type="HBoxContainer" parent="TaskbarLayer/StartPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="AppListContainer" type="VBoxContainer" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Favorites" type="VBoxContainer" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="SiggyButton" type="Button" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Siggy"

[node name="LoadButton" type="Button" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Load"

[node name="SaveButton" type="Button" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Save"

[node name="SleepButton" type="Button" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_lx1wk")
theme_override_font_sizes/font_size = 14
text = " sleep "

[node name="SleepButton2" type="Button" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_lx1wk")
theme_override_font_sizes/font_size = 14
text = "week sleep "

[node name="SettingsButton" type="Button" parent="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("7_o42ww")
icon = ExtResource("16_xcmse")

[connection signal="pressed" from="MarginContainer/GridContainer/TrashButton" to="." method="_on_trash_button_pressed"]
[connection signal="pressed" from="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/ScrollContainer/Taskbar/SettingsButton2" to="TaskbarLayer/StartPanel" method="_on_settings_button_pressed"]
[connection signal="gui_input" from="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/TimePanel" to="TaskbarLayer/TaskbarWrapper/MarginContainer/TaskbarRow/TimePanel" method="_on_gui_input"]
[connection signal="mouse_exited" from="TaskbarLayer/StartPanel" to="TaskbarLayer/StartPanel" method="_on_mouse_exited"]
[connection signal="pressed" from="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SiggyButton" to="TaskbarLayer/StartPanel" method="_on_siggy_button_pressed"]
[connection signal="pressed" from="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SleepButton" to="TaskbarLayer/StartPanel" method="_on_sleep_button_pressed"]
[connection signal="pressed" from="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SleepButton2" to="TaskbarLayer/StartPanel" method="_on_sleep_button_2_pressed"]
[connection signal="pressed" from="TaskbarLayer/StartPanel/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SettingsButton" to="TaskbarLayer/StartPanel" method="_on_settings_button_pressed"]
